# Appointment-Scheduler

./: CMakeLists.txt  appointment.cpp  appointment.h  appointmentapp.cpp  appointmentapp.h  changetime.cpp  changetime.h  changetime.ui  changetime1.cpp  changetime1.h  changetime1.ui  changetime2.cpp  changetime2.h  changetime2.ui  changetime3.cpp  changetime3.h  changetime3.ui  changetimetwo.cpp  changetimetwo.h  changetimetwo.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  updateapp.cpp  updateapp.h  updateapp.ui  updateappointment1.cpp  updateappointment1.h  updateappointment1.ui  updateappointment2.cpp  updateappointment2.h  updateappointment2.ui  updateappointment3.cpp  updateappointment3.h  updateappointment3.ui  viewappointments.cpp  viewappointments.h  viewappointments.ui
